--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 sudo: false
-language: scala
-services:
-- docker
+language: java
 cache:
   directories:
   - "$HOME/.cache"
-
 deploy:
   provider: script
-    script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
-    skip_cleanup: true
+  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
+  skip_cleanup: true
   on:
     tags: true
 
