--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,8 @@
     <groupId>azkaban-job-generation</groupId>
     <artifactId>job-generation</artifactId>
     <version>1.0.0</version>
-    <modules>
-        <module>job-generation-plugin</module>
-    </modules>
 
-    <packaging>pom</packaging>
+    <packaging>maven-plugin</packaging>
     <name>Azkaban Job Generation Plugin</name>
     <url>https://github.com/vamsi1995/azkaban-job-generator-plugin</url>
 
@@ -27,6 +24,21 @@
             <artifactId>scala-xml_2.11</artifactId>
             <version>1.1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+            <version>3.0</version>
+        </dependency>
+
+        <!-- dependencies to annotations -->
+        <dependency>
+            <groupId>org.apache.maven.plugin-tools</groupId>
+            <artifactId>maven-plugin-annotations</artifactId>
+            <version>3.4</version>
+        </dependency>
+
+
     </dependencies>
 
     <distributionManagement>
@@ -43,6 +55,30 @@
 
     <build>
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-plugin-plugin</artifactId>
+                <version>3.3</version>
+                <executions>
+                    <execution>
+                        <id>default-descriptor</id>
+                        <goals>
+                            <goal>descriptor</goal>
+                        </goals>
+                        <phase>process-classes</phase>
+                    </execution>
+                    <execution>
+                        <id>help-descriptor</id>
+                        <goals>
+                            <goal>helpmojo</goal>
+                        </goals>
+                        <configuration>
+                            <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
