--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ cache:
   - "$HOME/.cache"
 deploy:
   provider: script
-  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
+  script: mvn --settings .travis.settings.xml org.codehaus.mojo:versions-maven-plugin:2.3:set
+    -B -U -DnewVersion=$TRAVIS_TAG -Prelease && mvn --settings .travis.settings.xml
+    clean deploy -B -U -Prelease
+
   skip_cleanup: true
   on:
     tags: true
