--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>azkaban-job-generation</groupId>
-    <artifactId>job-generation</artifactId>
+    <groupId>com.github.vamsi</groupId>
+    <artifactId>azkaban-job-generation</artifactId>
     <version>1.0.0</version>
 
     <packaging>maven-plugin</packaging>
@@ -38,6 +38,11 @@
             <version>3.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <version>3.0.0</version>
+        </dependency>
 
     </dependencies>
 
