--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,83 @@
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.war
+*.ear
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
+# Intellij generated files #
+############################
+*.iml
+*.ipr
+*.iws
+.idea/
+.DS_Store
+.classpath
+.project
+.cache
+.idea
+
+# Maven generate files #
+#########################
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# Java files #
+##############
+*.class
+
+# Scala #
+#########
 *.class
 *.log
-.idea/
-*.iml
-.DS_Store
+.scala_dependencies
+
+# Build Specific #
+################
+dist/*
+target/
+classes/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
