--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ notifications:
     on_failure: always
 
 after_success:
-  - openssl aes-256-cbc -K $encrypted_02e7bfc60840_key -iv $encrypted_02e7bfc60840_iv -in codesigning.asc.enc -out codesigning.asc -d
+  - openssl aes-256-cbc -K $encrypted_02e7bfc60840_key -iv $encrypted_02e7bfc60840_iv -in .travis/codesigning.asc.enc -out .travis/codesigning.asc -d
+  - gpg --fast-import .travis/codesigning.asc.enc
   - mvn deploy -P sign,build-extras --settings .travis/settings.xml
 
 env:
