--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ notifications:
 
 after_success:
   - openssl aes-256-cbc -K $encrypted_02e7bfc60840_key -iv $encrypted_02e7bfc60840_iv -in .travis/codesigning.asc.enc -out .travis/codesigning.asc -d
-  - gpg --fast-import .travis/codesigning.asc.enc
+  - gpg --fast-import .travis/codesigning.asc
   - mvn deploy -P sign,build-extras --settings .travis/settings.xml
 
 env:
