changed travis and added env variables

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ before_install:
     - echo $GPG_OWNERTRUST | base64 --decode | $GPG_EXECUTABLE --import-ownertrust
 
 install:
-    mvn --settings .maven.xml install -DskipTests=true -Dgpg.skip -Dmaven.javadoc.skip=true -B -V
+    mvn --settings .travis/settings.xml install -DskipTests=true -Dgpg.skip -Dmaven.javadoc.skip=true -B -V
 
 ## Build and release to maven central
 script:
-    mvn clean deploy --settings .maven.xml -DskipTests=true -B -U -Prelease
+    mvn clean deploy --settings .travis/settings.xml -DskipTests=true -B -U -Prelease
 
 ## Get the project version
 before_deploy:
