--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,14 @@
             <version>${scala-xml.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.github.pathikrit/better-files -->
+        <dependency>
+            <groupId>com.github.pathikrit</groupId>
+            <artifactId>better-files_2.11</artifactId>
+            <version>2.16.0</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
